--- a/home.html
+++ b/home.html
@@ -31,6 +31,15 @@
    <div class="row">
      <div class="column">
        <div class="content">
+         <a href="romina-html/index.html">
+         <img src="romina-title.jpg" style="width:100%">
+         <h3>渲染织物的拼贴重生 | Romina Schimpf 「艺术访谈」</h3>
+         <p class="chinese">Romina Schimpf<br>
+         Visual artist，Misiones (Argentina) 1977, Degree in Social Work, University of Malaga ( spain)...▷▷▷▷</p></a>
+       </div>
+     </div>
+     <div class="column">
+       <div class="content">
          <a href="angelzhang-html/index.html">
          <img src="angelzhang-title.jpg" style="width:100%">
          <h3>银色精灵与危险之物 | Angel Zhang 「艺术访谈」</h3>
@@ -73,7 +82,9 @@
       <p class="chinese">Ben Dory<br>
       Ben Dory is an artist and metalsmith originally from Kansas City, KS. Dory received his BFA in Metalsmithing /Jewelry from the University of Kansas and his MFA in Metalsmithing from Southern Illinois University Carbondale in 2014...▷▷▷▷</p></a>
     </div>
+    </div>
   </div>
+  <div class="row">
   <div class="column">
     <div class="content">
       <a href="taylor-html/index.html">
@@ -83,8 +94,6 @@
       Taylor Simone is an interdisciplinary artist from Metro Detroit and resides in Toledo, Ohio. Her practice centralizes around space making. Taylor is the found of Exodus: School of expression...▷▷▷▷</p></a>
     </div>
   </div>
-  </div>
-  <div class="row">
   <div class="column">
     <div class="content">
       <a href="jiyu-html/index.html">
@@ -102,8 +111,7 @@
       <p class="chinese">陈素雨 Suyu Chen<br>
       Suyu Chen, born in Guangzhou, graduated from Guangzhou Academy of Fine Arts with a bachelor's degree and from the Department of Metalworking and Jewelry of Rochester Institute of Technology with a master's degree...▷▷▷▷</p></a>
     </div>
-  </div>
-  <div class="row">
+    </div>
   <div class="column">
     <div class="content">
       <a href="merani-html/index.html">
@@ -113,6 +121,7 @@
       Merani Schilcher is a media artist and designer with a passion for the internet, machines and experiments from Berlin. Human characteristics in technology and how we as humans are currently using and connecting with is a large focus of hers...▷▷▷▷</p></a>
     </div>
   </div>
+    <div class="row">
   <div class="column">
     <div class="content">
       <a href="lois-html/index.html">
@@ -121,7 +130,6 @@
       <p class="chinese">Lois Notebaart<br>
       My name is Lois (1995) I am born in The Netherlands but I have lived in the United States (Arizona and Montana) and France (Paris) while growing up...▷▷▷▷</p></a>
     </div>
-  </div>
   </div>
   <div class="column">
     <div class="content">
@@ -132,7 +140,6 @@
        Deniz Kazma is a Turkish, Belgian artist based in Brussels. She received her MFA in graphic design in Istanbul, this training and being able to work as a design professional for many years helped her use her intuitions and develop her skills as a self-taught artist.▷▷▷▷</p></a>
     </div>
     </div>
-        <div class="row">
      <div class="column">
        <div class="content">
          <a href="wenjing-html/index.html">
@@ -142,8 +149,6 @@
           Wenjing Zhou, born in HuNan, graduated from School Fine Arts De Nantes Saint-Nazaire. She worked and lived in Paris and Beijing. Her works exhibited at Gallery Ovision at Paris in France, Heduoling art gallery in Chengdu, Today art museum in Beijing, PyeongChang Olympic Media Art project in Korea, Asia Scene Art Space in Beijing. ▷▷▷▷</p></a>
        </div>
      </div>
-        </div>
-        <div class="row">
      <div class="column">
        <div class="content">
          <a href="pixy-html/index.html">
@@ -153,7 +158,8 @@
           Pixy Liao. Born and raised in Shanghai, China, Pixy Liao is an artist currently resides in Brooklyn, NY. Her long-term photographic project, “Experimental Relationships”, challenges traditional notions of gender. Femininity is also the subject of her other photographs and sculptures...▷▷▷▷</p></a>
        </div>
      </div>
-
+       </div>
+<div class="row">
      <div class="column">
        <div class="content">
          <a href="liulight-html/index.html">
@@ -162,8 +168,6 @@
          <p class="chinese">Liu Light 刘亮 is an artist, writer, and musician based in New York. They create a wide variety of interrelated work, including motion paintings, illustrations, poetry, art books, songs, and performance. Light is interested in creating a language / reality / world that they can exist in, exploring and reshaping the boundaries and grey areas between lived experience, dream, romance, body, self, and fantasy. ▷▷▷▷</p></a>
        </div>
      </div>
-        </div>
-        <div class="row">
      <div class="column">
        <div class="content">
          <a href="cyriakharris-html/index.html">
@@ -181,8 +185,6 @@
          <p class="chinese">Digbijayee Khatua received a Master’s degree in Fine Arts in 2015 from the College of Art, Delhi University, New Delhi, and a Bachelor’s degree in Visual Arts in 2012 from B. K. College of Art and Crafts, Bhubaneshwar, Odisha and...▷▷▷▷</p></a>
        </div>
      </div>
-        </div>
-        <div class="row">
      <div class="column">
        <div class="content">
          <a href="huayiwenxin-html/index.html">
@@ -191,6 +193,8 @@
          <p class="chinese">Painting group exhibition in Beijing in China. The show name is "Nature-hearted in painting - Retruning nature". The painters and artists: Zhengxin Liu, Chen Ma, Shilong Wei, Chongwen Yu. ▷▷▷▷</p></a>
        </div>
      </div>
+     </div>
+     <div class="row">
      <div class="column">
        <div class="content">
          <a href="huangwei-html/index.html">
@@ -201,8 +205,6 @@
          2011, Graduated from The Department of Chinese Painting of Tianjin Academy of Fine Arts with a bachelor's degree...▷▷▷▷</p></a>
        </div>
      </div>
-        </div>
-        <div class="row">
      <div class="column">
        <div class="content">
          <a href="synopticoffice-html/index.html">
@@ -221,8 +223,6 @@
            Ava Roth is a Toronto-based encaustic painter, embroiderer and mixed-media artist. Roth’s current work brings together techniques from the discrete worlds of fine art and crafts...▷▷▷▷</p></a>
        </div>
      </div>
-    </div>
-    <div class="row">
      <div class="column">
        <div class="content">
          <a href="splopdesign-html/index.html">
@@ -232,6 +232,8 @@
            Splop Design features and sells handcrafted wearable art and jewelry created by upcoming emerging artists of today.▷▷▷▷</p></a>
        </div>
      </div>
+     </div>
+     <div class="row">
    <div class="column">
      <div class="content">
        <a href="braulio-html/index.html">
@@ -241,8 +243,6 @@
         Bráulio Amado is a Graphic Designer and Illustrator from Portugal, currently living in New York City. He worked as a Designer at Pentagram NYC. Then joined Bloomberg Businessweek as an Art Director.▷▷▷▷</p></a>
      </div>
    </div>
-</div>
-   <div class="row">
    <div class="column">
      <div class="content">
        <a href="jason-html/index.html">
@@ -261,9 +261,6 @@
       Yuye Zhang is an international student from Suzhou, China. She is now in the 2nd year MFA program of Metal/Jewelry/CAD-CAM at Temple University Tyler School of Art & Architecture. Her contemporary jewelry work is frequently using 3D modeling and 3D printing technique...▷▷▷▷</p></a>
    </div>
  </div>
-       </div>
-  </div>
-  <div class="row">
  <div class="column">
    <div class="content">
      <a href="zhengluoyu-html/index.html">
@@ -275,6 +272,8 @@
       My songwriting has no great purpose, but I simply want to use music, singing and creation to express the current emotional state. ▷▷▷▷</p></a>
    </div>
  </div>
+ </div>
+     <div class="row">
  <div class="column">
    <div class="content">
      <a href="shiyouzhong-html/index.html">
@@ -283,8 +282,6 @@
      <p class="chinese">She was born in Taiwan in 1972 and graduated from the Drama Department of Chinese Culture University. She is a professional artist with over 10 years' painting experience. She is mainly engaged in acrylic and watercolor painting. ▷▷▷▷</p></a>
    </div>
  </div>
-  </div>
-    <div class="row">
  <div class="column">
    <div class="content">
    <a href="eric-html/index.html">
