--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -186,6 +186,11 @@
 <img class="titlelogo" src="angel-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="romina-flower.gif">
+</div>
+</div>
 </div>
 
 
