--- a/home.html
+++ b/home.html
@@ -31,6 +31,15 @@
    <div class="row">
      <div class="column">
        <div class="content">
+         <a href="sunsiyi-html/index.html">
+         <img src="sunsiyi-title.jpg" style="width:100%">
+         <h3>红线交织的 “灵魂之声” | 孙思奕 Siyi Sun「艺术访谈」</h3>
+         <p class="chinese">孙思奕 Siyi Sun<br>
+         Siyi Sun, was born in 2000 in Qingdao, China. She pursues Metals & Jewelry Design at the Rochester Institute of Technology(RIT). ...▷▷▷▷</p></a>
+       </div>
+     </div>
+     <div class="column">
+       <div class="content">
          <a href="romina-html/index.html">
          <img src="romina-title.jpg" style="width:100%">
          <h3>渲染织物的拼贴重生 | Romina Schimpf 「艺术访谈」</h3>
@@ -165,7 +174,7 @@
          <a href="liulight-html/index.html">
          <img src="liulight-title.jpg" style="width:100%">
          <h3>与其拥抱浪漫的理想，你必须面对每一段破碎爱情的意义 | Liu Light 「艺术访谈」</h3>
-         <p class="chinese">Liu Light 刘亮 is an artist, writer, and musician based in New York. They create a wide variety of interrelated work, including motion paintings, illustrations, poetry, art books, songs, and performance. Light is interested in creating a language / reality / world that they can exist in, exploring and reshaping the boundaries and grey areas between lived experience, dream, romance, body, self, and fantasy. ▷▷▷▷</p></a>
+         <p class="chinese">Liu Light 刘亮 is an artist, writer, and musician based in New York. They create a wide variety of interrelated work, including motion paintings, illustrations, poetry, art books, songs, and performance...▷▷▷▷</p></a>
        </div>
      </div>
      <div class="column">
@@ -287,8 +296,7 @@
    <a href="eric-html/index.html">
    <img src="eric-title.jpg" style="width:100%">
      <h3>出生在内心的怪兽 | ERIC MILLIKIN 「艺术访谈」</h3>
-     <p class="chinese"> Conceptual activist new media artist based in Detroit, Michigan, and Richmond, Virginia. Millikin comes from a working-class family, growing up in a mobile home in rural Michigan, the son of a laid-off auto worker and a Denny’s waitress.
-     The activist themes of his work often seek to change the types of prejudice, fear, and exploitation he has seen in the industrial Midwest and the former capital of the Confederacy... ▷▷▷▷</p></a>
+     <p class="chinese"> Conceptual activist new media artist based in Detroit, Michigan, and Richmond, Virginia. Millikin comes from a working-class family, growing up in a mobile home in rural Michigan, the son of a laid-off auto worker and a Denny’s waitress... ▷▷▷▷</p></a>
    </div>
  </div>
 <div class="column">
