--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -191,6 +191,11 @@
 <img class="titlelogo" src="romina-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="sunsiyi-flower.gif">
+</div>
+</div>
 </div>
 
 
